# shaderplayground

./: .gitignore  Cargo.toml  README.md  build-debug-android.sh
android/: gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/shaderplayground/app/: MainActivity.kt
android/app/src/main/res/values/: strings.xml
shaders/: default.wgsl  quad.wgsl
src/: app.rs  editor.rs  lib.rs  main.rs
